[package]
name = "bevy_game"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = { version = "0.10.1", features = ["dynamic_linking"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = "0.10.1"
console_error_panic_hook = "0.1.7"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
